v2.2.0:
    - 移除不必要的包限制，转为靠 hyperf 限制

v2.0.0:
    - 升级 hyperf 依赖到 2.0