@@ -8,5 +8,5 @@ final class Version
 {
     public const SDK_IDENTIFIER = 'sentry.php.hyperf';
 
-    public const SDK_VERSION = '2.0.0';
+    public const SDK_VERSION = '2.2.0';
 }
